# spritter-ha

./: .gitignore  README.md  hacs.json  icon.txt  pyproject.toml  pytesseract.pyi  repository.yaml
custom_components/spritter/: __init__.py  config_flow.py  const.py  manifest.json  sensor.py  strings.json
custom_components/spritter/translations/: de.json  en.json
spritter-addon/: Dockerfile  config.yaml  run.sh
spritter-addon/src/: requirements.txt  server.py
spritter-addon/src/static/: app.js  index.html  styles.css
